# z8000_emu

./: CMakeLists.txt  Makefile  README.md  libz8000.pc.in
include/: emu.h  z8000.h  z8000dab.h  z8000ops.hxx
lib/: CMakeLists.txt  libz8000.pc.in
lib/include/z8000/: emu.h  z8000.h  z8000_intf.h  z8000dasm.h  z8000ops.hxx
lib/src/: z8000.cpp  z8000dasm.cpp
src/: CMakeLists.txt  main.cpp  memory.h  z8000.cpp
test/: create_test_bin.sh  run_regression.sh  test_instructions.s
tests/: CMakeLists.txt  create_test_bin.sh  run_regression.sh  test_instructions.s
tools/: CMakeLists.txt  makedab.cpp
